<?xml version="1.0"?>
<package>
  <name>teraranger</name>
  <version>2.0.1</version>
  <description>The teraranger package</description>

  <maintainer email="krzysztof.zurad@terabee.com">Krzysztof Żurad</maintainer>
  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>
  <maintainer email="baptiste.potier@terabee.com">Baptiste Potier</maintainer>

  <url type="website">http://wiki.ros.org/teraranger</url>

  <author email="pierre-louis.kabaradjian@terabee.com">Kabaradjian Pierre-Louis</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
